--- a/config/config.conf
+++ b/config/config.conf
@@ -2,37 +2,25 @@
 default_mode = setup
 factory_mode_enabled = true
 setup_mode_enabled = true
-language = zh_CN
-
+language = en_US
 
 [language]
 active = true
 
-
 [welcome]
 logo_enabled = true
-logo_path = assets/img/logo2.png
+logo_path = assets/img/logo3.png
 logo_width = 400
 logo_height = 200
-delay = 6000
-
+delay = 8000
 
 [select_language]
 columns = 3
 rows = 4
 additional_languages = en_US: English, zh_CN: 中文, fr_FR: Français, es_ES: Español
 
-
-
 [Network_Select_WiFi]
-image_path = assets/img/wificonfig.png
-image_width = 200 
-image_height = 150 
-
-
-
-
-
-
-
+image_path = assets/img/wificonfig1.png
+image_width = 200
+image_height = 150
 
