--- a/config/config.conf
+++ b/config/config.conf
@@ -2,6 +2,7 @@
 default_mode = setup
 factory_mode_enabled = true
 setup_mode_enabled = true
+auto_update_enabled = false 
 language = en_US
 
 [language]
@@ -9,10 +10,10 @@ active = true
 
 [welcome]
 logo_enabled = true
-logo_path = assets/img/logo2.png
-logo_width = 400
-logo_height = 200
-delay = 8000
+logo_path = assets/img/logo.png
+logo_width = 150
+logo_height = 150
+delay = 6000
 
 [select_language]
 columns = 3
@@ -20,7 +21,19 @@ rows = 4
 additional_languages = en_US: English, zh_CN: 中文, fr_FR: Français, es_ES: Español
 
 [Network_Select_WiFi]
-image_path = assets/img/wificonfig1.png
+image_path = assets/img/wificonfig.png
 image_width = 200
 image_height = 150
+
+[Printer]
+model = C235
+
+[HeadType]
+type = Direct Drive
+
+[Smartbox]
+enabled = False
+
+[Hyperdrive]
+enabled = False
 
